--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
       <artifactId>google-api-client-plugin</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-oauth2</artifactId>
+      <version>v2-rev83-1.19.0</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
