--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.vx68k.hudson.plugin</groupId>
   <artifactId>google-login-plugin</artifactId>
   <packaging>hpi</packaging>
-  <name>Google Login Plugin (Beta) for Hudson</name>
+  <name>Google Login Plugin for Hudson</name>
   <version>2.0-SNAPSHOT</version>
   <description>
     This plugin adds a federated login option and allows users to login with
