--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>google-login-plugin</artifactId>
   <packaging>hpi</packaging>
   <name>Google Login Plugin for Hudson</name>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <description>
     This plugin adds a federated login option and allows users to login with
     their Google accounts.
@@ -53,7 +53,7 @@
   <scm>
     <connection>scm:hg:https://bitbucket.org/kazssym/hudson-google-login-plugin</connection>
     <developerConnection>scm:hg:https://bitbucket.org/kazssym/hudson-google-login-plugin</developerConnection>
-    <tag>default</tag>
+    <tag>release/2.0</tag>
     <url>https://bitbucket.org/kazssym/hudson-google-login-plugin/src</url>
   </scm>
   <build>
