--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
     <version>3.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.vx68k.hudson.plugin</groupId>
+  <groupId>org.hudsonci.plugins</groupId>
   <artifactId>google-login-plugin</artifactId>
   <packaging>hpi</packaging>
   <name>Google Login Plugin for Hudson</name>
-  <version>2.0</version>
+  <version>2.1</version>
   <description>
     This plugin adds a federated login option and allows users to login with
     their Google accounts.
