--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   pom.xml for Tools Labels Plugin for Hudson
-  Copyright (C) 2014 Kaz Nishimura
+  Copyright (C) 2014-2015 Kaz Nishimura
 
   This program is free software: you can redistribute it and/or modify it
   under the terms of the GNU Affero General Public License as published by the
@@ -28,10 +28,7 @@
   <packaging>hpi</packaging>
   <name>Google Login Plugin for Hudson</name>
   <version>3.0-SNAPSHOT</version>
-  <description>
-    This plugin adds a federated login option and allows users to login with
-    their Google accounts.
-  </description>
+  <description>This plugin implements federated login with Google accounts.</description>
   <url>http://kazssym.bitbucket.org/hudson-google-login-plugin/</url>
   <issueManagement>
     <system>Bitbucket</system>
