--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
   </developers>
   <licenses>
     <license>
-      <name>GNU Affero General Public License version 3</name>
+      <name>GNU Affero General Public License version 3 or later</name>
       <url>http://www.gnu.org/licenses/agpl.html</url>
     </license>
   </licenses>
