--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>google-login-plugin</artifactId>
   <packaging>hpi</packaging>
   <name>Google Login Plugin for Hudson</name>
-  <version>3.0-SNAPSHOT</version>
+  <version>3.0</version>
   <description>This plugin implements federated login with Google accounts.</description>
   <url>http://kazssym.bitbucket.org/hudson-google-login-plugin/</url>
   <issueManagement>
@@ -50,7 +50,7 @@
   <scm>
     <connection>scm:hg:https://bitbucket.org/kazssym/hudson-google-login-plugin</connection>
     <developerConnection>scm:hg:https://bitbucket.org/kazssym/hudson-google-login-plugin</developerConnection>
-    <tag>default</tag>
+    <tag>release/3.0</tag>
     <url>https://bitbucket.org/kazssym/hudson-google-login-plugin/src</url>
   </scm>
   <build>
