--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <system>Bitbucket</system>
     <url>https://bitbucket.org/kazssym/hudson-google-login-plugin/issues</url>
   </issueManagement>
+  <inceptionYear>2014</inceptionYear>
   <developers>
     <developer>
       <id>kazssym</id>
@@ -53,6 +54,9 @@
     <tag>default</tag>
     <url>https://bitbucket.org/kazssym/hudson-google-login-plugin/src</url>
   </scm>
+  <organization>
+    <name>Kaz Nishimura</name>
+  </organization>
   <build>
     <plugins>
       <plugin>
