--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
   <build>
     <resources>
       <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>src/main/resources-filtered</directory>
+        <filtering>true</filtering>
+      </resource>
+      <resource>
         <targetPath>META-INF</targetPath>
         <directory>.</directory>
         <includes>
@@ -101,10 +108,6 @@
         <artifactId>maven-hpi-plugin</artifactId>
         <!-- Version 3.0.3 should resolve the build problem with Java 7. -->
         <version>3.0.3</version>
-        <configuration>
-          <webResources>
-          </webResources>
-        </configuration>
       </plugin>
     </plugins>
   </build>
